fix horizontal scrolling and rerendering on id update

--- a/components/AppContent/AppContent.module.css
+++ b/components/AppContent/AppContent.module.css
@@ -36,6 +36,7 @@
   padding: 100px 20px;
   padding-bottom: 20px;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .title {
